syntax = "proto3";
package rig.v1;
option go_package = "thoreinstein.com/rig/pkg/api/v1;apiv1";

service CommandService {
  rpc Execute(ExecuteRequest) returns (stream ExecuteResponse);
}

message ExecuteRequest {
  string command = 1;
  repeated string args = 2;
  map<string, string> flags = 3;
}

message ExecuteResponse {
  bytes stdout = 1;
  bytes stderr = 2;
  int32 exit_code = 3;
  bool done = 4;
}
